--- a/src/main/resources/org/familybudget/familybudget/main-view.fxml
+++ b/src/main/resources/org/familybudget/familybudget/main-view.fxml
@@ -206,14 +206,27 @@
             <Region VBox.vgrow="ALWAYS"/>
 
             <!-- Кнопка выхода снизу -->
-            <Button fx:id="logoutButton" maxWidth="Infinity" onAction="#onLogoutClick"
+            <Button fx:id="logoutButton"
+                    maxWidth="Infinity"
+                    onAction="#onLogoutClick"
+                    graphicTextGap="8"
                     style="-fx-background-color: #FF4B55;
-                           -fx-background-radius: 999;
-                           -fx-text-fill: white;
-                           -fx-font-weight: bold;
-                           -fx-padding: 7 14;
-                           -fx-font-size: 13;"
-                    text="Выйти"/>
+               -fx-background-radius: 999;
+               -fx-text-fill: white;
+               -fx-font-weight: bold;
+               -fx-padding: 7 14;
+               -fx-font-size: 13;"
+                    text="Выйти">
+
+                <graphic>
+                    <SVGPath content="
+            M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0z
+            M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708z"
+                             style="-fx-fill: white; -fx-scale-x: 1.0; -fx-scale-y: 1.0;"/>
+                </graphic>
+
+            </Button>
+
 
         </VBox>
     </right>
