--- a/src/main/resources/org/familybudget/familybudget/main-view.fxml
+++ b/src/main/resources/org/familybudget/familybudget/main-view.fxml
@@ -298,21 +298,22 @@
             <!-- ОБНОВИТЬ ОПЕРАЦИИ: тот же стиль, что ОБНОВИТЬ БАЛАНС -->
             <HBox alignment="CENTER">
                 <Button fx:id="refreshOperationsButton"
+                        onAction="#onRefreshOperations"
                         graphicTextGap="8"
                         style="-fx-background-color: #4C6FFF;
-                               -fx-background-radius: 999;
-                               -fx-text-fill: white;
-                               -fx-font-weight: bold;
-                               -fx-padding: 6 14;
-                               -fx-font-size: 14;"
+               -fx-background-radius: 999;
+               -fx-text-fill: white;
+               -fx-font-weight: bold;
+               -fx-padding: 6 14;
+               -fx-font-size: 14;"
                         text="Обновить операции">
 
                     <graphic>
                         <SVGPath content="M17.65 6.35A8 8 0 1 0 20 12h-2a6 6 0 1 1-1.76-4.24L14 10h6V4l-2.35 2.35Z"
                                  style="-fx-fill: white; -fx-scale-x: 0.9; -fx-scale-y: 0.9;"/>
                     </graphic>
-
                 </Button>
+
             </HBox>
 
             <Label fx:id="statusLabel" style="-fx-text-fill: #D32F2F; -fx-font-size: 12;"/>
